# conntextual

./: .pylintrc  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
conntextual/: __init__.py  __main__.py  app.py  entry.py
conntextual/commands/: all.py
conntextual/ui/: task.py
local/configs/: package.yaml  python.yaml
local/variables/: package.yaml
tests/commands/: test_client.py
