[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "conntextual"
version = "1.3.7"
description = "A network-application TUI using textual."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Libre Embedded", email = "vaughn@libre-embedded.com"}
]
maintainers = [
  {name = "Libre Embedded", email = "vaughn@libre-embedded.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Development Status :: 5 - Production/Stable"
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  "pylint",
  "flake8",
  "black",
  "ruff",
  "mypy",
  "isort",
  "yamllint",
  "yambs",
  "vmklib>=2.0.3",
  "sphinx",
  "sphinx-book-theme",
  "setuptools-wrapper",
  "types-psutil",
  "types-setuptools"
]

[project.scripts]
conntextual = "conntextual.entry:main"
